--- a/eqs/api/api.toml
+++ b/eqs/api/api.toml
@@ -57,3 +57,7 @@ PATH = [ "get_transaction/:hash" ]
 ":hash" = "TaggedBase64"
 DOC = "Returns the committed transaction, if any, with the specified hash, with output indexes."
 ERROR_hash = "A valid commitment hash is required. Commitment begin with CMTMNT_CAPE_TRNSTN~."
+
+[route.healthcheck]
+PATH = [ "healthcheck" ]
+DOC = "Responds with JSON {\"status\": \"available\"}."
