--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Espresso Systems <hello@espressosys.com>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
 
+[[bin]]
+name = "wallet-api"
+path = "src/wallet-api/main.rs"
+
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
@@ -13,6 +17,7 @@ base64 = "0.13"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
+eqs = { path = "../eqs" }
 escargot = "0.5.2"
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 futures = "0.3.0"
