--- a/wallet/api/api.toml
+++ b/wallet/api/api.toml
@@ -356,6 +356,43 @@ DOC = """
 Sponsor or define an asset, depending on if an ERC20 code is given. Reports the asset definition.
 """
 
+[route.updateasset]
+PATH = [
+  "updateasset/:asset/symbol/:symbol",
+  "updateasset/:asset/description/:description",
+  "updateasset/:asset/icon/:icon",
+  "updateasset/:asset/symbol/:symbol/description/:description",
+  "updateasset/:asset/symbol/:symbol/icon/:icon",
+  "updateasset/:asset/description/:description/icon/:icon",
+  "updateasset/:asset/symbol/:symbol/description/:description/icon/:icon",
+]
+":asset" = "TaggedBase64"
+":symbol" = "Base64"
+":description" = "Base64"
+":icon" = "Base64"
+DOC = """
+Edit the local metadata associated with the given asset code.
+
+Will fail if the asset code does not exist in the wallet. Will have no effect on verified assets.
+"""
+
+[route.exportasset]
+PATH = ["exportasset/:asset"]
+":asset" = "TaggedBase64"
+DOC = """
+Return a serialized representation of the asset with the given code.
+"""
+
+[route.importasset]
+PATH = ["importasset/:asset"]
+":asset" = "TaggedBase64"
+DOC = """
+Add an asset to the wallet's asset library.
+
+`:asset` should be a serialized representation of an asset, as returned by `exportasset`. The asset
+may have been created and exported in a different keystore or wallet.
+"""
+
 [route.mint]
 PATH = ["mint/asset/:asset/amount/:amount/fee/:fee/minter/:minter/recipient/:recipient"]
 ":asset" = "TaggedBase64"
