Finish asset-related endpoints (#779)
* Expand ui::AssetInfo to include additional metadata

* Add routes to update, export, and import assets

* Rename `wrapped_asset` to `wrapped_erc20`

--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -58,6 +58,7 @@ tracing-futures = "0.2"
 tracing-subscriber = "0.2.19"
 
 [dev-dependencies]
+ark-serialize = "0.3.0"
 tracing-test = "0.2.1"
 
 [features]
