--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -26,6 +26,8 @@ surf = "2.3.2"
 tide = "0.16.0"
 signal-hook = "0.3.13"
 signal-hook-async-std = "0.2.2"
+tracing = "0.1.26"
+tracing-subscriber = "0.3.9"
 hex = "0.4.3"
 rand = "0.8.5"
 dirs = "4.0.0"
