--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -55,7 +55,7 @@ toml = "0.5"
 tracing = "0.1.26"
 tracing-distributed = "0.3.1"
 tracing-futures = "0.2"
-tracing-subscriber = "0.2.19"
+tracing-subscriber = { version = "0.3.9", features = [ "env-filter" ] }
 
 [dev-dependencies]
 ark-serialize = "0.3.0"
