--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -25,6 +25,7 @@ seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
 async-std = "1.10.0"
 bincode = "1.3.3"
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+futures = "0.3.0"
 hex = "0.4.3"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
