--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -31,4 +31,4 @@ hex = "0.4.3"
 rand = "0.8.5"
 dirs = "4.0.0"
 tempdir = "0.3.7"
-tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
+tracing-subscriber = { version = "0.3" }
