--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -27,8 +27,8 @@ tide = "0.16.0"
 signal-hook = "0.3.13"
 signal-hook-async-std = "0.2.2"
 tracing = "0.1.26"
-tracing-subscriber = "0.3.9"
 hex = "0.4.3"
 rand = "0.8.5"
 dirs = "4.0.0"
 tempdir = "0.3.7"
+tracing-subscriber = { version = "0.3" }
