--- a/eqs/Cargo.toml
+++ b/eqs/Cargo.toml
@@ -41,7 +41,7 @@ tide = "0.16.0"
 tide-websockets = "0.4.0"
 toml = "0.5"
 tracing = "0.1.26"
-tracing-subscriber = { version = "0.3" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 surf = "2.3.2"
