--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -53,9 +53,9 @@ tide = "0.16.0"
 tide-websockets = "0.4.0"
 toml = "0.5"
 tracing = "0.1.26"
-tracing-distributed = "0.3.1"
+tracing-distributed = "0.4"
 tracing-futures = "0.2"
-tracing-subscriber = { version = "0.3" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 ark-serialize = "0.3.0"
