log macros in libraries now integrate as tracing; RUST_LOG workse

--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -30,5 +30,8 @@ signal-hook-async-std = "0.2.2"
 surf = "2.3.2"
 tempdir = "0.3.7"
 tide = "0.16.0"
+tide-tracing = "0.0.11"
 tracing = "0.1.26"
+tracing-futures = "0.2"
+tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
