--- a/eqs/Cargo.toml
+++ b/eqs/Cargo.toml
@@ -37,9 +37,12 @@ strum_macros = "0.20.1"
 surf = { version = "2.3.2", optional = true }
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
 tide = "0.16.0"
+tide-tracing = "0.0.11"
 tide-websockets = "0.4.0"
 toml = "0.5"
 tracing = "0.1.26"
+tracing-futures = "0.2"
+tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
