--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -30,9 +30,12 @@ snafu = { version = "0.7", features = ["backtraces"] }
 structopt = { version = "0.3" }
 surf = { version = "2.3.2", optional = true }
 tide = "0.16.0"
+tide-tracing = "0.0.11"
 tide-websockets = "0.4.0"
 toml = "0.5"
 tracing = "0.1.26"
+tracing-futures = "0.2"
+tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
