--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -50,11 +50,13 @@ surf = "2.3.2"
 tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
 tempdir = "0.3.7"
 tide = "0.16.0"
+tide-tracing = "0.0.11"
 tide-websockets = "0.4.0"
 toml = "0.5"
 tracing = "0.1.26"
 tracing-distributed = "0.4"
 tracing-futures = "0.2"
+tracing-log = "0.1.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
