Enable etherscan verification
Required for #834

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,5 @@ GOERLI_URL="https://goerli.infura.io/v3/<project_id>"
 TEST_MNEMONIC="test test test test test test test test test test test junk"
 
 CAPE_RELAYER_WALLET_MNEMONIC="test test test test test test test test test test test junk"
+
+ETHERSCAN_API_KEY="NOT_SET"
