--- a/contracts/package.json
+++ b/contracts/package.json
@@ -30,6 +30,7 @@
     "@ethersproject/bytes": "^5.5.0",
     "@ethersproject/providers": "^5.5.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "8.0.2",
     "@typechain/hardhat": "^3.0.0",
