--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -19,6 +19,7 @@ cap-rust-sandbox = { path = "../contracts/rust" }
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
 eqs = { path = "../eqs" }
 escargot = "0.5.2"
+espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros" }
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 futures = "0.3.0"
 futures-util = "0.3.8"
