--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -26,7 +26,6 @@ bincode = "1.3.3"
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
 espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git" }
 
-
 # We need the legacy feature in order to avoid gas estimation issues. See https://github.com/gakonst/ethers-rs/issues/825
 ethers = { features = ["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 ethers-contract = { features = ["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
@@ -34,8 +33,8 @@ ethers-core = { features = ["legacy"], git = "https://github.com/gakonst/ethers-
 futures = "0.3.16"
 generic-array = { version = "0.14.4", features = ["serde"] }
 hex = "0.4.3"
+itertools = "0.10.3"
 
-itertools = "0.10.1" # needed for jf-cap to compile
 jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
 jf-plonk = { features = ["std", "test_apis"], git = "https://github.com/EspressoSystems/jellyfish.git" }
 jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
@@ -66,3 +65,4 @@ default-features = false
 ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs" }
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
 glob = "^0.3.0"
+itertools = "0.10.3"
